# count-crab

./: Dockerfile  README.md  classify_food.py  main.py  models.py  pyproject.toml  requirements.txt  start.sh  train_model.py
.github/workflows/: main.yml
migrations/: add_location_columns.py  init_db.py
